--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br /><br /><br /><br /><br /><br />
     <main>
       <section id="whitepaper">
-        <h2>All or nothing</h2>
+        <h2>All or Nothing</h2>
         <p>Experience a new level of decentralized organization.</p>
       </section>
 
